--- a/source/Views/SuccessStoryView.xaml
+++ b/source/Views/SuccessStoryView.xaml
@@ -36,7 +36,7 @@
                        Style="{DynamicResource BaseTextBlockStyle}"
                        HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Grid>
-                
+
                 <Grid Name="PART_Data">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1.5*" />
@@ -192,14 +192,16 @@
                                     <ColumnDefinition Width="auto" />
                                     <ColumnDefinition Width="10" />
                                     <ColumnDefinition Width="300" />
+                                    <ColumnDefinition Width="444*"/>
+                                    <ColumnDefinition Width="89*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <CheckBox Grid.Column="0" IsChecked="False" Name="PART_FilteredGames" Click="PART_FilteredGames_Click" VerticalAlignment="Center">
+                                <CheckBox Grid.Column="0" IsChecked="False" Name="PART_FilteredGames" Click="PART_FilteredGames_Click" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="0,2,19,2">
                                     <Label Content="{DynamicResource LOCCommonUsedFilteredGames}" FontSize="16" />
                                 </CheckBox>
 
-                                <Label Grid.Column="2" Content="{DynamicResource LOCCompletionStatuses}" FontSize="16" />
-                                <ComboBox Grid.Column="4" Name="FilterStatus" ItemsSource="{Binding FilterStatusItems}" IsEditable="True" IsReadOnly="True">
+                                <Label Grid.Column="2" Content="{DynamicResource LOCCompletionStatuses}" FontSize="16" Grid.ColumnSpan="2" Margin="2,0,7,0" />
+                                <ComboBox Grid.Column="4" Name="FilterStatus" ItemsSource="{Binding FilterStatusItems}" IsEditable="True" IsReadOnly="True" Grid.ColumnSpan="2" Margin="4,0,439,0">
                                     <ComboBox.ItemTemplate>
                                         <DataTemplate>
                                             <CheckBox Name="chkstatus" Checked="Chkstatus_Checked" Unchecked="Chkstatus_Unchecked" Tag="{Binding StatusName}"
