--- a/source/Views/SuccessStorySettingsView.xaml
+++ b/source/Views/SuccessStorySettingsView.xaml
@@ -309,6 +309,10 @@
                                             <RowDefinition Height="auto" />
                                             <RowDefinition Height="10" />
                                             <RowDefinition Height="auto" />
+                                            <RowDefinition Height="10" />
+                                            <RowDefinition Height="auto" />
+                                            <RowDefinition Height="10" />
+                                            <RowDefinition Height="auto" />
                                         </Grid.RowDefinitions>
 
                                         <CheckBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="7" IsChecked="{Binding Settings.EnableRetroAchievementsView}">
@@ -319,6 +323,32 @@
                                         <TextBox Grid.Column="2" Grid.Row="2" Text="{Binding Settings.RetroAchievementsUser}" />
                                         <Label Grid.Column="4" Grid.Row="2" Content="{DynamicResource LOCAPIKey}" />
                                         <TextBox Grid.Column="6" Grid.Row="2" Text="{Binding Settings.RetroAchievementsKey}" />
+
+                                        <Label Grid.Column="0" Grid.Row="4" Content="Associated platform" />
+                                        <ListBox Grid.Row="6" Grid.ColumnSpan="10" Height="200" Name="PART_LbRaConsole">
+                                            <ListBox.ItemTemplate>
+                                                <DataTemplate>
+                                                    <Grid Margin="0,2">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="*" />
+                                                            <ColumnDefinition Width="5" />
+                                                            <ColumnDefinition Width="*" />
+                                                        </Grid.ColumnDefinitions>
+
+                                                        <Label Grid.Column="0" Content="{Binding RaConsoleName}" />
+                                                        <ComboBox Grid.Column="2" ItemsSource="{Binding Platforms}">
+                                                            <ComboBox.ItemTemplate>
+                                                                <DataTemplate>
+                                                                    <CheckBox IsChecked="{Binding IsSelected}" Content="{Binding Name}"
+                                                                              Checked="CheckBox_Checked"
+                                                                              Unchecked="CheckBox_Unchecked" />
+                                                                </DataTemplate>
+                                                            </ComboBox.ItemTemplate>
+                                                        </ComboBox>
+                                                    </Grid>
+                                                </DataTemplate>
+                                            </ListBox.ItemTemplate>
+                                        </ListBox>
                                     </Grid>
                                 </Border>
                             </Expander.Content>
